+Fixed dark mode styling for journals +Added XP cost to spells with an XP cost

--- a/src/styles/Global.scss
+++ b/src/styles/Global.scss
@@ -108,5 +108,36 @@
       .journal-sidebar {
          background: #191a21;
       }
+
+      .directory {
+         input {
+            color: var(--input-color);
+            background: var(--input-background);
+         }
+
+         ::placeholder {
+            color: var(--input-color);
+         }
+
+         .action-buttons {
+            button {
+               border-color: var(--button-border-color);
+               background: var(--button-background);
+               color: var(--button-color);
+               margin: 0;
+            
+               &:disabled {
+                  cursor: default;
+                  background: var(--button-background-disabled);
+               }
+            
+               &:hover {
+                  &:not(:disabled) {
+                     background: radial-gradient(var(--button-background-highlight), var(--button-background));
+                  }
+               }
+            }
+         }
+      }
    }
 }
